basic styles and layout with bootstrap added

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,19 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1><%= campground.title %> </h1>
-    <h2><%= campground.location %> </h2>
-    <a href="/campgrounds">all campgrounds</a>
-    <div><a href="/campgrounds/<%= campground.id %>/edit">edit</a></div>
-
-    <form action="/campgrounds/<%=campground.id  %>?_method=delete" method="post">
-        <button>delete</button>
-    </form>
-</body>
-</html>
+<%layout('layouts/boilerplate') %>
+    
+<div class="row justify-content-center mb-3">
+    <div class="col-6">
+        <div class="card">
+            <img src="<%= campground.image %>" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"><%= campground.title %></h5>
+              <p class="card-text"><%= campground.description %></p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item text-muted"><%= campground.location %></li>
+              <li class="list-group-item">$ <%= campground.price %>/night</li>
+              <li class="list-group-item"><a href="/campgrounds" class="card-link btn btn-dark btn-sm">All campgrounds</a> </li>
+            </ul>
+            <div class="card-body">
+              <a href="/campgrounds/<%= campground.id %>/edit" class="card-link btn btn-info">Edit</a>
+              <form action="/campgrounds/<%= campground.id %>?_method=delete" method="post" class="d-inline">
+                <button class="btn btn-danger">DELETE</button>
+              </form>
+            </div>
+        </div>
+    </div>
+</div>
+    
+    
