--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,19 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campgrounds</title>
-</head>
-<body>
-    <h1>all Campgrounds</h1>
+<%layout('layouts/boilerplate') %>
+    <h1>All Campgrounds</h1>
     <a href="/campgrounds/new">add campground</a>
-    <ul>
-        <% for(let campground of campgrounds){%>
-            <li><a href="/campgrounds/<%= campground.id %>"><%= campground.title %></a></li>
-        <% } %> 
-    </ul>
-    
-</body>
-</html>
+
+    <% for(let campground of campgrounds){%>
+        <div class="card mb-2">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="<%= campground.image %>" alt="" class="img-fluid">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <%= campground.title %>
+                        </h5>
+                        <p class="card-text">
+                            <%= campground.description %>
+                        </p>
+                        <p class="card-subtitle mb-2 text-muted">
+                            <small>
+                                <%= campground.location %>
+                            </small>
+                        </p>
+                        <a href="/campgrounds/<%= campground.id %>" class="btn btn-primary">VIEW <%= campground.title %></a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <% } %>
