--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,20 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body>
-    <h1>new campground</h1>
-    <form action="/campgrounds" method="post">
-        <div><label for="title">title</label><input type="text" id="title" name="campground[title]"></div>
-        <div><label for="location">location</label><input type="text" id="location" name="campground[location]"></div>
-        <button>submit</button>
-    </form>
-</body>
-
-</html>
+<%layout('layouts/boilerplate') %>
+    <h1 class="text-center mb-5">NEW CAMPGROUND</h1>
+    <div class="row justify-content-center">
+        <div class="col-6">
+            <form action="/campgrounds" method="post">
+                <div class="mb-3">
+                    <label class="form-label" for="title">Title</label>
+                    <input class="form-control" type="text" id="title" name="campground[title]">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="location">Location</label>
+                    <input class="form-control" type="text" id="location" name="campground[location]">
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1">$</span>
+                    <input type="number" class="form-control" placeholder="0.00" name="campground[price]">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="image">Image link</label>
+                    <input class="form-control" type="text" id="image" name="campground[image]">
+                </div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text">Description</span>
+                    <textarea class="form-control" name="campground[description]"></textarea>
+                </div>
+                <button class="btn btn-success">Submit</button>
+            </form>
+        </div>
+    
+    </div>
+    
