--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -3,29 +3,50 @@
 <h1 class="text-center mb-5">EDIT CAMPGROUND</h1>
 <div class="row justify-content-center">
         <div class="col-6">
-                <form action="/campgrounds/<%= campground.id %>?_method=put" method="post">
+                <form action="/campgrounds/<%= campground.id %>?_method=put" method="post"
+                        class="validated-form" novalidate>
                         <div class="mb-3">
-                        <label class="form-label" for="title">Title</label>
-                        <input class="form-control" type="text" id="title" name="campground[title]" value="<%= campground.title %>">
+                                <label class="form-label" for="title">Title</label>
+                                <input class="form-control" type="text" id="title" name="campground[title]"
+                                        value="<%= campground.title %>" required>
+                                <div class="valid-feedback">
+                                        Looks good!
+                                </div>
                         </div>
                         <div class="mb-3">
-                        <label class="form-label" for="location">Location</label>
-                        <input class="form-control" type="text" id="location" name="campground[location]" value="<%= campground.location %>">
+                                <label class="form-label" for="location">Location</label>
+                                <input class="form-control" type="text" id="location"
+                                        name="campground[location]" value="<%= campground.location %>" required>
+                                <div class="valid-feedback">
+                                        Looks good!
+                                </div>
                         </div>
                         <div class="input-group mb-3">
-                        <span class="input-group-text" id="basic-addon1">$</span>
-                        <input type="number" class="form-control" placeholder="0.00" name="campground[price]" value="<%= campground.price %>">
+                                <span class="input-group-text" id="basic-addon1">$</span>
+                                <input type="number" class="form-control" placeholder="0.00"
+                                        name="campground[price]" value="<%= campground.price %>" required>
+                                <div class="valid-feedback">
+                                        Looks good!
+                                </div>
                         </div>
                         <div class="mb-3">
-                        <label class="form-label" for="image">Image link</label>
-                        <input class="form-control" type="text" id="image" name="campground[image]" value="<%= campground.image %>">
+                                <label class="form-label" for="image">Image link</label>
+                                <input class="form-control" type="text" id="image" name="campground[image]"
+                                        value="<%= campground.image %>" required>
+                                <div class="valid-feedback">
+                                        Looks good!
+                                </div>
                         </div>
                         <div class="input-group mb-3">
-                        <span class="input-group-text">Description</span>
-                        <textarea class="form-control" name="campground[description]"><%= campground.description %></textarea>
+                                <span class="input-group-text">Description</span>
+                                <textarea class="form-control" name="campground[description]"
+                                        required><%= campground.description %></textarea>
+                                <div class="valid-feedback">
+                                        Looks good!
+                                </div>
                         </div>
                         <button class="btn btn-info">Save</button>
                 </form>
         </div>
-    
+
 </div>
