--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,30 +2,47 @@
     <h1 class="text-center mb-5">NEW CAMPGROUND</h1>
     <div class="row justify-content-center">
         <div class="col-6">
-            <form action="/campgrounds" method="post">
+            <form action="/campgrounds" method="post" class="validated-form" novalidate>
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
-                    <input class="form-control" type="text" id="title" name="campground[title]">
+                    <input class="form-control" type="text" id="title" name="campground[title]" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="location">Location</label>
-                    <input class="form-control" type="text" id="location" name="campground[location]">
-                </div>
-                <div class="input-group mb-3">
-                    <span class="input-group-text" id="basic-addon1">$</span>
-                    <input type="number" class="form-control" placeholder="0.00" name="campground[price]">
+                    <input class="form-control" type="text" id="location" name="campground[location]" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="image">Image link</label>
-                    <input class="form-control" type="text" id="image" name="campground[image]">
+                    <input class="form-control" type="text" id="image" name="campground[image]" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
                 </div>
+
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1">$</span>
+                    <input type="number" class="form-control" placeholder="0.00" name="campground[price]" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                </div>
+
                 <div class="input-group mb-3">
                     <span class="input-group-text">Description</span>
-                    <textarea class="form-control" name="campground[description]"></textarea>
+                    <textarea class="form-control" name="campground[description]" required></textarea>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
                 </div>
                 <button class="btn btn-success">Submit</button>
             </form>
         </div>
-    
+
     </div>
-    
+
