--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,26 +1,71 @@
 <%layout('layouts/boilerplate') %>
-    
-<div class="row justify-content-center mb-3">
+
+  <div class="row justify-content-center my-3">
     <div class="col-6">
-        <div class="card">
-            <img src="<%= campground.image %>" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title"><%= campground.title %></h5>
-              <p class="card-text"><%= campground.description %></p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item text-muted"><%= campground.location %></li>
-              <li class="list-group-item">$ <%= campground.price %>/night</li>
-              <li class="list-group-item"><a href="/campgrounds" class="card-link btn btn-dark btn-sm">All campgrounds</a> </li>
-            </ul>
-            <div class="card-body">
-              <a href="/campgrounds/<%= campground.id %>/edit" class="card-link btn btn-info">Edit</a>
-              <form action="/campgrounds/<%= campground.id %>?_method=delete" method="post" class="d-inline">
-                <button class="btn btn-danger">DELETE</button>
-              </form>
-            </div>
+      <div class="card mb-3" >
+        <img src="<%= campground.image %>" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">
+            <%= campground.title %>
+          </h5>
+          <p class="card-text">
+            <%= campground.description %>
+          </p>
         </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item text-muted">
+            <%= campground.location %>
+          </li>
+          <li class="list-group-item">$ <%= campground.price %>/night</li>
+          <li class="list-group-item"><a href="/campgrounds" class="card-link btn btn-dark btn-sm">All campgrounds</a>
+          </li>
+        </ul>
+        <div class="card-body">
+          <a href="/campgrounds/<%= campground.id %>/edit" class="card-link btn btn-info">Edit</a>
+          <form action="/campgrounds/<%= campground.id %>?_method=delete" method="post" class="d-inline">
+            <button class="btn btn-danger">DELETE</button>
+          </form>
+        </div>
+      </div>
     </div>
-</div>
-    
-    
+
+    <div class="col-6">
+      <h2>Leave a review</h2>
+      <form action="/campgrounds/<%= campground.id %>/reviews" method="post" novalidate class="validated-form mb-3">
+        <div class="mb-3 row">
+          <div class="col-6">
+            <label for="rating" class="form-label">Rating</label>
+            <input type="range" name="Review[rating]" id="rating" class="form-range" min="1" max="5">
+          </div>
+        </div>
+        <div class="mb-3">
+          <label for="review" class="form-label">Review</label>
+          <textarea name="Review[body]" id="review" cols="30" rows="3" class="form-control" required></textarea>
+          <div class="invalid-feedback">
+            review can't be empty!!
+          </div>
+          <div class="valid-feedback">
+            looks good!!
+          </div>
+        </div>
+        <button class="btn btn-success">submit</button>
+      </form>
+
+
+      <% for( let r of campground.reviews ) { %>
+        <div class="card mb-3">
+          <div class="card-body">
+            <h5 class="card-title">
+              Rating: <%= r.rating %>/5
+            </h5>
+            <p class="card-text">
+              Review: <%= r.body %>
+            </p>
+            <form action="/campgrounds/<%= campground.id %>/reviews/<%= r.id %>?_method=delete" method="post">
+              <button class="btn btn-sm btn-danger">delete</button>
+            </form>
+          </div>
+        </div>
+      <% } %>
+    </div>
+  </div>
