--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -3,8 +3,7 @@
 <h1 class="text-center mb-5">EDIT CAMPGROUND</h1>
 <div class="row justify-content-center">
         <div class="col-6">
-                <form action="/campgrounds/<%= campground.id %>?_method=put" method="post"
-                        class="validated-form" novalidate>
+                <form action="/campgrounds/<%= campground.id %>?_method=put" method="post" class="validated-form" novalidate>
                         <div class="mb-3">
                                 <label class="form-label" for="title">Title</label>
                                 <input class="form-control" type="text" id="title" name="campground[title]"
