--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
-</head>
-<body>
-    <h1>home</h1>
-</body>
-</html>
+<%layout('layouts/boilerplate') %>
+
+<h1 class="text-center">YELP-CAMP</h1>
+<div class="row my-3">
+    <div class="col-6 offset-3">
+        <div class="card mb-3">
+            <div class="card-body">
+                <img src="https://source.unsplash.com/collection/483251" class="card-img-top" alt="...">
+                <h5 class="card-title">
+                  WELCOME
+                </h5>
+                <p class="card-text">
+                  ENJOY THE BEST ADVENTURE THIS SUMMER!!!
+                </p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item"><a href="/campgrounds" class="card-link btn btn-dark btn-sm">All campgrounds</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
