--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,6 +11,15 @@
                 <a class="nav-link" href="/campgrounds">campgrounds</a>
                 <a class="nav-link" href="/campgrounds/new">add campground</a>
             </div>
+            <div class="navbar-nav ms-auto">
+                <% if (!currentUser) { %>
+                    <a class="nav-link"  href="/login">login</a>
+                    <a class="nav-link"  href="/register">register</a>
+                <% }else{ %>
+                    <a class="nav-link"  href="/logout">logout</a>
+                <% } %> 
+
+            </div>
         </div>
     </div>
 </nav>
