--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -16,40 +16,50 @@
           <li class="list-group-item text-muted">
             <%= campground.location %>
           </li>
+          <li class="list-group-item">
+            Submitted by  <%= campground.author.username %>
+          </li>
           <li class="list-group-item">$ <%= campground.price %>/night</li>
           <li class="list-group-item"><a href="/campgrounds" class="card-link btn btn-dark btn-sm">All campgrounds</a>
           </li>
         </ul>
-        <div class="card-body">
-          <a href="/campgrounds/<%= campground.id %>/edit" class="card-link btn btn-info">Edit</a>
-          <form action="/campgrounds/<%= campground.id %>?_method=delete" method="post" class="d-inline">
-            <button class="btn btn-danger">DELETE</button>
-          </form>
-        </div>
+        <% if (currentUser && currentUser.id===campground.author.id) { %>
+          <div class="card-body">
+            <a href="/campgrounds/<%= campground.id %>/edit" class="card-link btn btn-info">Edit</a>
+            <form action="/campgrounds/<%= campground.id %>?_method=delete" method="post" class="d-inline">
+              <button class="btn btn-danger">DELETE</button>
+            </form>
+          </div>
+        <% } %>
+        
       </div>
     </div>
 
     <div class="col-6">
-      <h2>Leave a review</h2>
-      <form action="/campgrounds/<%= campground.id %>/reviews" method="post" novalidate class="validated-form mb-3">
-        <div class="mb-3 row">
-          <div class="col-6">
-            <label for="rating" class="form-label">Rating</label>
-            <input type="range" name="Review[rating]" id="rating" class="form-range" min="1" max="5">
+      <% if (currentUser) { %>
+        <h2>Leave a review</h2>
+        <form action="/campgrounds/<%= campground.id %>/reviews" method="post" novalidate class="validated-form mb-3">
+          <div class="mb-3 row">
+            <div class="col-6">
+              <label for="rating" class="form-label">Rating</label>
+              <input type="range" name="Review[rating]" id="rating" class="form-range" min="1" max="5">
+            </div>
           </div>
-        </div>
-        <div class="mb-3">
-          <label for="review" class="form-label">Review</label>
-          <textarea name="Review[body]" id="review" cols="30" rows="3" class="form-control" required></textarea>
-          <div class="invalid-feedback">
-            review can't be empty!!
+          <div class="mb-3">
+            <label for="review" class="form-label">Review</label>
+            <textarea name="Review[body]" id="review" cols="30" rows="3" class="form-control" required></textarea>
+            <div class="invalid-feedback">
+              review can't be empty!!
+            </div>
+            <div class="valid-feedback">
+              looks good!!
+            </div>
           </div>
-          <div class="valid-feedback">
-            looks good!!
-          </div>
-        </div>
-        <button class="btn btn-success">submit</button>
-      </form>
+          <button class="btn btn-success">submit</button>
+        </form>
+
+      <% } %>
+      
 
 
       <% for( let r of campground.reviews ) { %>
@@ -58,12 +68,16 @@
             <h5 class="card-title">
               Rating: <%= r.rating %>/5
             </h5>
+            <h6 class="card-subtitle mb-2 text-muted">By <%= r.author.username %> </h6>
             <p class="card-text">
               Review: <%= r.body %>
             </p>
-            <form action="/campgrounds/<%= campground.id %>/reviews/<%= r.id %>?_method=delete" method="post">
-              <button class="btn btn-sm btn-danger">delete</button>
-            </form>
+            <% if (currentUser && currentUser.equals(r.author)) { %>
+              <form action="/campgrounds/<%= campground.id %>/reviews/<%= r.id %>?_method=delete" method="post">
+                <button class="btn btn-sm btn-danger">delete</button>
+              </form>
+            <% } %>
+            
           </div>
         </div>
       <% } %>
