add image upload to new and edit & add thumbnail virtual

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -30,6 +30,7 @@
         crossorigin="anonymous"></script>
 
     <script src="/javascripts/validateForm.js"></script>
+    <script src="/javascripts/previewMultiple.js"></script>
 </body>
 
 </html>
