--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,9 +1,10 @@
 <%layout('layouts/boilerplate') %>
-
-<h1 class="text-center mb-5">EDIT CAMPGROUND</h1>
-<div class="row justify-content-center">
-        <div class="col-6">
-                <form action="/campgrounds/<%= campground.id %>?_method=put" method="post" class="validated-form" novalidate>
+        <link rel="stylesheet" href="/stylesheets/images.css">
+        <h1 class="text-center mb-5">EDIT CAMPGROUND</h1>
+        <div class="row justify-content-center">
+        <div class="col-6 mb-3">
+                <form action="/campgrounds/<%= campground.id %>?_method=put" method="post"
+                        class="validated-form" novalidate enctype="multipart/form-data">
                         <div class="mb-3">
                                 <label class="form-label" for="title">Title</label>
                                 <input class="form-control" type="text" id="title" name="campground[title]"
@@ -28,10 +29,13 @@
                                         Looks good!
                                 </div>
                         </div>
-                        <div class="mb-3">
-                                <label class="form-label" for="image">Image link</label>
-                                <input class="form-control" type="text" id="image" name="campground[image]"
-                                        value="<%= campground.image %>" required>
+                        <div class="mb-3 custom-file-image">
+                                <label class="form-label" for="image">Add Images</label>
+                                <input class="form-control" type="file" id="image" name="image" 
+                                        multiple>
+                                <ul class="disp-img d-flex my-2">
+
+                                </ul>
                                 <div class="valid-feedback">
                                         Looks good!
                                 </div>
@@ -44,8 +48,36 @@
                                         Looks good!
                                 </div>
                         </div>
+                        <div class="mb-3">
+                                <label for="" class="form-label">Delete images?</label>
+                                <div class="row row-cols-1 row-cols-md-4 g-4 mb-3">
+                                <% campground.images.forEach((img,i)=>{%>
+                                        <div class="col">
+                                                <div class="card onclickprop">
+                                                        <label for="image-<%= i %>">
+                                                                <img src="<%= img.thumbnail %>" alt="" class="img-thumbnail card-img">
+                                                        </label> 
+                                                        <div class="card-img-overlay pt-1 ps-2 text-end">
+                                                                <div class="form-check">
+                                                                        <input class="form-check-input" type="checkbox" name="deleteImages[]" id="image-<%= i %>" value="<%= img.filename %>">
+                                                                </div>
+                                                        </div> 
+                                                </div>
+                                        </div>
+                                        <!-- <div class="mx-1 d-flex flex-column">
+                                                <label for="image-<%= i %>">
+                                                        <img src="<%= img.thumbnail %>" alt="" class="img-thumbnail">
+                                                </label>
+                                                <div class="form-check">
+                                                        <input class="form-check-input" type="checkbox" name="deleteImages[]" id="image-<%= i %>" value="<%= img.filename %>">
+                                                </div>
+                                        </div> -->
+                                <%}) %>
+                                </div>
+                        </div>
+
                         <button class="btn btn-info">Save</button>
                 </form>
         </div>
 
-</div>
+        </div>
