--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,8 +1,9 @@
 <%layout('layouts/boilerplate') %>
+    <link rel="stylesheet" href="/stylesheets/images.css">
     <h1 class="text-center mb-5">NEW CAMPGROUND</h1>
     <div class="row justify-content-center">
         <div class="col-6">
-            <form action="/campgrounds" method="post" class="validated-form" novalidate>
+            <form action="/campgrounds" method="post" class="validated-form" novalidate enctype="multipart/form-data">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
                     <input class="form-control" type="text" id="title" name="campground[title]" required>
@@ -17,9 +18,19 @@
                         Looks good!
                     </div>
                 </div>
-                <div class="mb-3">
+                <!-- <div class="mb-3">
                     <label class="form-label" for="image">Image link</label>
                     <input class="form-control" type="text" id="image" name="campground[image]" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                </div> -->
+                <div class="mb-3 custom-file-image">
+                    <label class="form-label" for="image">Image </label>
+                    <input class="form-control" type="file" id="image" name="image" required multiple>
+                    <ul class="disp-img d-flex my-2">
+
+                    </ul>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
