--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,8 +3,27 @@
 
   <div class="row justify-content-center my-3">
     <div class="col-6">
+      <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <% for( let i=0;i<campground.images.length;i++ ) { %>
+            <div class="carousel-item <%= (i===0)? 'active' :'' %>">
+              <img src="<%= campground.images[i].url %>" class="d-block w-100" alt="...">
+            </div>
+            <% } %>
+        </div>
+        <% if (campground.images.length>1) { %>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        <% } %>
+        
+      </div>
       <div class="card mb-3">
-        <img src="<%= campground.image %>" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">
             <%= campground.title %>
