added geocode and maps to campground

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -27,7 +27,7 @@
                 </div> -->
                 <div class="mb-3 custom-file-image">
                     <label class="form-label" for="image">Image </label>
-                    <input class="form-control" type="file" id="image" name="image" required multiple>
+                    <input class="form-control" type="file" id="image" name="image"  multiple>
                     <ul class="disp-img d-flex my-2">
 
                     </ul>
