--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,6 @@
 <%layout('layouts/boilerplate') %>
+    <div id="map" style="width: 100%;height: 550px;"></div>
+
     <h1>All Campgrounds</h1>
     <a href="/campgrounds/new">add campground</a>
 
@@ -22,10 +24,18 @@
                             </small>
                         </p>
                         <a href="/campgrounds/<%= campground.id %>" class="btn btn-primary">VIEW <%= campground.title %></a>
-
                     </div>
                 </div>
             </div>
         </div>
 
         <% } %>
+        <script>
+            const mapToken='<%-process.env.MAPBOX_TOKEN%>'
+            const campgrounds={features:<%-JSON.stringify(campgrounds)%>}
+        </script>
+
+        <script src="/javascripts/clusterMap.js"></script>
+        
+
+        
