--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,11 +1,26 @@
 <%layout('layouts/boilerplate') %>
-    <div id="map" style="width: 100%;height: 550px;"></div>
+    <style>
+        body {
+            height: 100vh;
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("https://images.unsplash.com/photo-1516557070061-c3d1653fa646?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8YmxhY2t8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+        }
+    </style>
+    <link rel="stylesheet" href="/stylesheets/campcard.css">
+    <div class="row justify-content-center">
+        <div class="col">
+            <div id="map" style="height: 450px;"></div>
+        </div>
+    </div>
 
-    <h1>All Campgrounds</h1>
+    <h1 class="text-white">All Campgrounds</h1>
     <a href="/campgrounds/new">add campground</a>
 
     <% for(let campground of campgrounds){%>
-        <div class="card mb-2">
+        <div class="card mb-2 camp-card text-white-50">
             <div class="row">
                 <div class="col-md-4">
                     <img src="<%= campground.images[0].url %>" alt="" class="img-fluid">
@@ -18,12 +33,12 @@
                         <p class="card-text">
                             <%= campground.description %>
                         </p>
-                        <p class="card-subtitle mb-2 text-muted">
+                        <p class="card-subtitle mb-2">
                             <small>
                                 <%= campground.location %>
                             </small>
                         </p>
-                        <a href="/campgrounds/<%= campground.id %>" class="btn btn-primary">VIEW <%= campground.title %></a>
+                        <a href="/campgrounds/<%= campground.id %>" class="btn btn-dark">VIEW <%= campground.title %></a>
                     </div>
                 </div>
             </div>
