--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -57,8 +57,9 @@
       </div>
     </div>
 
-    <div class="col-6">
-      <div id='map' style='max-width: 100%; height: 400px;'></div>
+    <div class="col-6" >
+      <div id='map' style='max-width: 100%; height: 400px;'>
+    </div>
       
       <% if (currentUser) { %>
         <h2>Leave a review</h2>
