--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -2,7 +2,7 @@
         <link rel="stylesheet" href="/stylesheets/images.css">
         <h1 class="text-center mb-5">EDIT CAMPGROUND</h1>
         <div class="row justify-content-center">
-        <div class="col-6 mb-3">
+        <div class="col-sm-6 mb-3">
                 <form action="/campgrounds/<%= campground.id %>?_method=put" method="post"
                         class="validated-form" novalidate enctype="multipart/form-data">
                         <div class="mb-3">
