--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="/stylesheets/images.css">
     <h1 class="text-center mb-5">NEW CAMPGROUND</h1>
     <div class="row justify-content-center">
-        <div class="col-6">
+        <div class="col-sm-6 mb-3">
             <form action="/campgrounds" method="post" class="validated-form" novalidate enctype="multipart/form-data">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
