--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,7 +2,7 @@
   <link rel="stylesheet" href="/stylesheets/stars.css">
 
   <div class="row justify-content-center my-3">
-    <div class="col-6">
+    <div class="col-md-6">
 
 
       <div id="carouselExample" class="carousel slide">
@@ -57,10 +57,8 @@
       </div>
     </div>
 
-    <div class="col-6" >
-      <div id='map' style='max-width: 100%; height: 400px;'>
-    </div>
-      
+    <div class="col-md-6" >
+      <div id='map' style='max-width: 100%; height: 400px;'></div>
       <% if (currentUser) { %>
         <h2>Leave a review</h2>
         <form action="/campgrounds/<%= campground.id %>/reviews" method="post" novalidate class="validated-form mb-3">
@@ -120,7 +118,7 @@
               </div>
             </div>
             <% } %>
-    </div>
+      </div>
   </div>
 
   <script>
