--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,23 +1,23 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" data-bs-theme="dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="/">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link"  href="/">Home</a>
+                <a class="nav-link" href="/">Home</a>
                 <a class="nav-link" href="/campgrounds">campgrounds</a>
                 <a class="nav-link" href="/campgrounds/new">add campground</a>
             </div>
             <div class="navbar-nav ms-auto">
                 <% if (!currentUser) { %>
-                    <a class="nav-link"  href="/login">login</a>
-                    <a class="nav-link"  href="/register">register</a>
-                <% }else{ %>
-                    <a class="nav-link"  href="/logout">logout</a>
-                <% } %> 
+                    <a class="nav-link" href="/login">login</a>
+                    <a class="nav-link" href="/register">register</a>
+                    <% }else{ %>
+                        <a class="nav-link" href="/logout">logout</a>
+                        <% } %>
 
             </div>
         </div>
