--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
 
     <div class="row justify-content-center mb-3">
-        <div class="col-4">
+        <div class="col-sm-8 col-md-6 col-lg-4">
             <div class="card">
                 <img class="card-img-top" src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8bmF0dXJlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="">
                 <div class="card-body">
